2003-12-27  Martin Mares  <mj@ucw.cz>

	* update-pciids.sh: Try to preserve permissions of the old file
	if chmod supports --reference. Should close Debian Bug #223740.

	* lib/proc.c (proc_setup): Increased path name length limit to 1024.
	Thanks for Redhat and Mandrake for inspiration.

	* lib/configure: Recognize ppc and ppc64, both have 64-bit addresses.
	Grabbed from Redhat (Fedora) patches.

2003-12-27  Martin Mares  <mj@ucw.cz>

	Merged bug fixes from Debian patches:

	* lspci.c (show_verbose): "Cache Line Size" should be capitalized.

	* lspci.c (show_pcix_nobridge): Added a missing newline.

	* lib/proc.c (proc_scan): When reading the header type, don't
	forget to clear the topmost bit indicating that the device has
	multiple functions.

2003-12-27  Martin Mares  <mj@ucw.cz>

	Updated the FreeBSD port. Thanks to Samy Al Bahra <samy@kerneled.com>
	for the patches:

	* lib/Makefile: Add ${FREEBSD_SYS} to the include path if it's defined.
	* lib/fbsd-device.c: Select the right set of system includes according
	to __FreeBSD_version.

2003-12-27  Martin Mares  <mj@ucw.cz>

	Merged support for Solaris on i386 by Bill Moore <billm@eng.sun.com>
	and cleaned up:

	* lib/configure: Recognize SunOS.
	* lib/internal.h: Learn how to recognize byte order on SunOS.
	* lib/i386-ports.c: Split OS-dependent I/O port access from i386-ports.c.
	* lib/i386-io-linux.h: Linux specific part.
	* lib/i386-io-hurd.h: GNU/Hurd specific part.
	* lib/i386-io-sunos.h: SunOS specific part.

2003-12-26  Martin Mares  <mj@ucw.cz>

	* lib/header.h (PCI_*_MASK): Cast to pciaddr_t explicitly.

	* lib/pci.h: Types declared in <sys/types.h> should be usable on all
	platforms we currently support, so kill the forest of #ifdef's and
	use them in all cases.

	* lib/pci.h: Use ULONG_MASK to decide whether we should use long
	or long long to represent a 64-bit address. Killed HAVE_LONG_ADDRESS.
	Define format strings for addresses, port numbers and IRQ numbers
	directly in pci.h.
